[package]
name = "coresched"
version = "0.1.0"
edition = "2021"
description = "CPU core scheduler — Rust rewrite of Legend coresched (Bash/Python)"

[[bin]]
name = "coresched"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["fs", "signal", "sched", "process"] }
fd-lock = "4"
regex = "1"
